[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/player/player_01.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/OpenDyslexic-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menus/character/CharacterMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[node name="CharacterMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.658824, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="TextureRect" parent="."]
margin_left = 56.0
margin_top = 176.0
margin_right = 312.0
margin_bottom = 688.0
texture = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
margin_left = 40.0
margin_top = 32.0
margin_right = 415.0
margin_bottom = 129.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.658824, 0.658824, 1 )
enabled_focus_mode = 0
text = "GO BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Control" parent="."]
margin_left = 608.0
margin_top = 32.0
margin_right = 648.0
margin_bottom = 72.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="Info"]
margin_left = -136.0
margin_right = -24.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "HP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpPoints" type="Label" parent="Info"]
margin_left = -8.0
margin_right = 163.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "###"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="Info"]
margin_left = 208.0
margin_right = 498.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "Damage:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamagePoints" type="Label" parent="Info"]
margin_left = 520.0
margin_right = 634.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLeft" type="Control" parent="."]
margin_left = 528.0
margin_top = 216.0
margin_right = 568.0
margin_bottom = 256.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="PointsLeft"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "Points left:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="PointsLeft"]
margin_left = 424.0
margin_right = 520.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthPoints" type="Control" parent="."]
margin_left = -16.0
margin_top = 80.0
margin_right = 24.0
margin_bottom = 120.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="HealthPoints"]
margin_left = 1120.0
margin_top = 272.0
margin_right = 1163.0
margin_bottom = 369.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.658824, 0.658824, 1 )
enabled_focus_mode = 0
text = "+"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="HealthPoints"]
margin_left = 952.0
margin_top = 272.0
margin_right = 992.0
margin_bottom = 369.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.658824, 0.658824, 1 )
enabled_focus_mode = 0
text = "-"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="HealthPoints"]
margin_left = 536.0
margin_top = 296.0
margin_right = 897.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "Health points:"

[node name="Points" type="Label" parent="HealthPoints"]
margin_left = 1016.0
margin_top = 296.0
margin_right = 1096.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "#"
align = 1

[node name="DamagePoints" type="Control" parent="."]
margin_left = -16.0
margin_top = 168.0
margin_right = 32.0
margin_bottom = 208.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Plus" type="Button" parent="DamagePoints"]
margin_left = 1120.0
margin_top = 272.0
margin_right = 1163.0
margin_bottom = 369.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.658824, 0.658824, 1 )
enabled_focus_mode = 0
text = "+"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minus" type="Button" parent="DamagePoints"]
margin_left = 952.0
margin_top = 272.0
margin_right = 992.0
margin_bottom = 369.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.658824, 0.658824, 0.658824, 1 )
enabled_focus_mode = 0
text = "-"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="DamagePoints"]
margin_left = 528.0
margin_top = 288.0
margin_right = 915.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "Damage points:"

[node name="Points" type="Label" parent="DamagePoints"]
margin_left = 1016.0
margin_top = 296.0
margin_right = 1096.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
text = "##"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HealthPoints/Plus" to="." method="_on_health_plus_pressed"]
[connection signal="pressed" from="HealthPoints/Minus" to="." method="_on_health_minus_pressed"]
[connection signal="pressed" from="DamagePoints/Plus" to="." method="_on_damage_plus_pressed"]
[connection signal="pressed" from="DamagePoints/Minus" to="." method="_on_damage_minus_pressed"]
